# magtag-rtic

./: Cargo.toml  README.md
src/: main.rs
