[package]
authors = ["Rob Tsuk <rob@tsuk.com>"]
edition = "2018"
readme = "README.md"
name = "magtag-rtic"
version = "0.1.0"

[dependencies]
atsamd51j = { version = "0.9.0", features = [ "rt" ] }
bare-metal = "1.0.0"
cortex-m = "0.6.7"
cortex-m-rt = "*"
cortex-m-rtic = "0.5.5"
cortex-m-semihosting = "0.3.3"
embedded-hal = "0.2.3"
feather_m4 = { version = "0.7.0", features = [ "rt" ] }
panic-semihosting = "0.5.6"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "magtag-rtic"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
